# test-tag

./: .rustfmt.toml  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
.github/: dependabot.yml
.github/workflows/: publish.yml  test.yml
src/: lib.rs
tests/: common.rs  failures.rs  prototype.rs  tests.rs
tests/fail/: invalid-tags.rs  invalid-tags.stderr  missing-tag-1.rs  missing-tag-1.stderr  missing-tag-2.rs  missing-tag-2.stderr  unsupported-tag-syntax-1.rs  unsupported-tag-syntax-1.stderr  unsupported-tag-syntax-2.rs  unsupported-tag-syntax-2.stderr
