[package]
name = "test-tag"
version = "0.0.0"
authors = ["Daniel Mueller <deso@posteo.net>"]
edition = "2021"
license = "Apache-2.0 OR MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = {version = "1.0.32", default-features = false}
quote = {version = "1.0", default-features = false}
# TODO: Minimize features.
syn = {version = "2.0", default-features = false, features = ["full", "parsing", "printing", "proc-macro"]}
