[package]
name = "test-tag"
version = "0.0.0"
authors = ["Daniel Mueller <deso@posteo.net>"]
edition = "2021"
license = "Apache-2.0 OR MIT"
readme = "README.md"
autotests = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[[test]]
name = "prototype"
test = false

[[test]]
name = "tests"

[[test]]
name = "failures"

[dependencies]
proc-macro2 = { version = "1.0.32", default-features = false }
quote = { version = "1.0", default-features = false }
syn = { version = "2.0", default-features = false, features = ["full", "parsing", "printing", "proc-macro"] }

[dev-dependencies]
anyhow = "1.0"
maplit = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
trybuild = "1.0"
