[package]
name = "test-tag"
version = "0.1.6"
authors = ["Daniel Mueller <deso@posteo.net>"]
edition = "2021"
license = "Apache-2.0 OR MIT"
homepage = "https://github.com/d-e-s-o/test-tag"
repository = "https://github.com/d-e-s-o/test-tag.git"
readme = "README.md"
categories = [
  "development-tools::testing",
  "development-tools",
  "config",
]
keywords = [
  "tag",
  "tagging",
  "test",
  "testing",
  "tests",
]
description = """
The #[tag] attribute for convenient tagging/grouping of #[test] tests.
"""
autotests = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[[test]]
name = "prototype"
test = false

[[test]]
name = "tests"

[[test]]
name = "failures"

[dependencies]
proc-macro2 = { version = "1.0.32", default-features = false }
quote = { version = "1.0", default-features = false }
syn = { version = "2.0", default-features = false, features = ["full", "parsing", "printing", "proc-macro"] }

[dev-dependencies]
anyhow = "1.0"
maplit = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
test-log = "0.2"
tokio = {version = "1.0", features = ["rt-multi-thread", "macros"]}
trybuild = "1.0"
